[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2018"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
serde_json = "1.0.79"
url = "2.3.1"
serde = "1.0.152"

[dependencies.rspotify]
version = "0.11.6"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

[dependencies.songbird]
version = "0.3.2"
features = ["builtin-queue", "yt-dlp"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api",
  "voice",
]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[patch.crates-io]
# Patched, because rspotify still uses an old version of chrono of which a dependency won't compile in future versions of rust
rspotify = { git = "https://github.com/LetUsFlow/rspotify.git" }
